# alpino-tokenizer-python

./: Cargo.toml  README.md  shell.nix
.github/: dependabot.yml
src/: lib.rs
