[package]
name = "alpino-tokenizer"
version = "0.1.0"
authors = ["Daniël de Kok <me@danieldk.eu>"]
edition = "2018"

[lib]
name = "alpino_tokenizer"
crate-type = ["cdylib"]

[dependencies]
rust-tokenizer = { version = "0.1", package = "alpino-tokenizer" }

[dependencies.pyo3]
version = "0.8"
features = ["extension-module"]
